# cpp_qt_recovery

./: .gitignore
hello_qt/src/: main.cpp
jour_1/: CMakeLists.txt
jour_1/src/: banana.txt  exo1.cpp  exo2.cpp  exo3.cpp  exo4.cpp  exo5.cpp
jour_2/: CMakeLists.txt
jour_2/src/: exo1.cpp  exo2.cpp  folderBrowser.cpp  folderBrowser.h  helloWindow.cpp  helloWindow.h  inputWindow.cpp  inputWindow.h  main.cpp
jour_3/: CMakeLists.txt
jour_3/src/: assetRenamer.cpp  assetRenamer.h  fileRenamer.cpp  fileRenamer.h  main.cpp
jour_4/src/: assetRenamer.cpp  assetRenamer.h  fileRenamer.cpp  fileRenamer.h
template/: CMakeLists.txt
template/src/: main.cpp
